# dunder

./: .gitignore  404.html  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
01 - Objects, Values and Types/placeholder/: index.html
02 - Standard Type Hierarchy/placeholder/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__bool__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__bytes__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__del__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__eq__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__format__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__ge__/: index.html
03 - Dunder Methods/03.01 - Basic Configuration/__gt__/: index.html
04 - Builtins/abs/: index.html
Builtins/abs/: index.html
Dunder Methods/__bool__/: index.html
Dunder Methods/__bytes__/: index.html
Dunder Methods/__del__/: index.html
Dunder Methods/__eq__/: index.html
Dunder Methods/__format__/: index.html
Dunder Methods/__ge__/: index.html
Dunder Methods/__gt__/: index.html
Dunder Methods/__hash__/: index.html
Dunder Methods/__init__/: index.html
Dunder Methods/__le__/: index.html
Dunder Methods/__lt__/: index.html
Dunder Methods/__ne__/: index.html
Dunder Methods/__new__/: index.html
Dunder Methods/__repr__/: index.html
Dunder Methods/__str__/: index.html
docs/: index.md  overview.md
docs/Dunder Methods/: __bool__.md
search/: search_index.json
(+8 files in other folders)
