[tool.poetry]
name = "dunder-docs"
version = "0.1.0"
description = "A single place of documentation for python dunder methods"
authors = ["symonk <jackofspaces@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.4"
mkdocstrings = "^0.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
